--- a/Detecting Parkinson's.ipynb
+++ b/Detecting Parkinson's.ipynb
@@ -640,11 +640,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Bayesian optimization for XGBClassifier"
+   ]
   },
   {
    "cell_type": "code",
@@ -1205,8 +1205,7 @@
     }
    ],
    "source": [
-    "# Bayesian optimization for XGBClassifier\n",
-    "\n",
+    "# Define the search parameter spacs\n",
     "space = {\n",
     "        'max_depth': hp.quniform('max_depth', 2, 20, 1),\n",
     "        'min_child_samples': hp.quniform ('min_child_samples', 1, 20, 1),\n",
@@ -1217,6 +1216,8 @@
     "        'colsample_bytree' : hp.uniform('colsample_bytree', 0.3, 1.0)\n",
     "}\n",
     "trial = Trials()\n",
+    "\n",
+    "# Define the objective to minimize\n",
     "def hyperopt_XGBClassifier(space):\n",
     "    model = xgb.XGBClassifier(n_estimators= int(space['n_estimators']),\n",
     "                               max_depth = int(space['max_depth']),\n",
@@ -1227,13 +1228,6 @@
     "                               colsample_bytree = space['colsample_bytree']\n",
     "                               )\n",
     "    \n",
-    "#     score = cross_val_score(model,\n",
-    "#                             train_cl[ML_columns], \n",
-    "#                             train_cl['Target'], \n",
-    "#                             cv  = cv,\n",
-    "#                             scoring='roc_auc'                            \n",
-    "#                            )\n",
-    "\n",
     "    model.fit(trainX, trainY)\n",
     "    \n",
     "    # make predictions on the testing data and initialize a dictionary to store our computed metreics\n",
@@ -1245,7 +1239,12 @@
     "    (tn, fp, fn, tp) = cm\n",
     "    metrics[\"acc\"] = (tp + tn) / float(cm.sum())\n",
     "    print(\"Accuracy Score {:.3f} params {}\".format(metrics[\"acc\"], space))\n",
+    "    \n",
+    "    # Maximize the accuracy by minimize (1-accuracy)\n",
     "    return {'loss':(1 - metrics[\"acc\"]), 'status': STATUS_OK}\n",
+    "\n",
+    "\n",
+    "\n",
     "best = fmin(fn=hyperopt_XGBClassifier,\n",
     "            space=space,\n",
     "            algo=tpe.suggest,\n",
