update on README and script comments

--- a/Detecting Parkinson's.ipynb
+++ b/Detecting Parkinson's.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,8 @@
     }
    ],
    "source": [
-    "dataset_path = r'dataset\\wave'\n",
+    "# Here we use the \"wave\" data, feel free to change to \"spiral\" data or combine both\n",
+    "dataset_path = r'dataset/wave'\n",
     "trial_num = 5\n",
     "trainingPath = os.path.sep.join([dataset_path,\"training\"])\n",
     "testingPath = os.path.sep.join([dataset_path, \"testing\"])\n",
@@ -111,16 +112,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0,)"
+       "(72, 12996)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -152,15 +153,15 @@
       "[INFO] training model 5 of 5...\n",
       "acc\n",
       "===\n",
-      "mean=0.8133, std=0.0400 \n",
+      "mean=0.7067, std=0.0389 \n",
       "\n",
       "sensitivity\n",
       "===========\n",
-      "mean=0.7467, std=0.0777 \n",
+      "mean=0.7067, std=0.0533 \n",
       "\n",
       "specificity\n",
       "===========\n",
-      "mean=0.8800, std=0.0267 \n",
+      "mean=0.7067, std=0.1162 \n",
       "\n"
      ]
     }
@@ -193,7 +194,8 @@
     "\n",
     "# loop over our metrics\n",
     "for metric in (\"acc\", \"sensitivity\", \"specificity\"):\n",
-    "    # grab the list of values for the current metric, then compute the mean and standard deviation\n",
+    "    # grab the list of values for the current metric, \n",
+    "    # then compute the mean and standard deviation\n",
     "    values = trials[metric]\n",
     "    mean = np.mean(values)\n",
     "    std = np.std(values)\n",
@@ -213,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -605,14 +607,6 @@
     "                                           max_depth= int(best['max_depth']),\n",
     "                                           min_samples_leaf= int(best['min_samples_leaf']))                      \n",
     "                           \n",
-    "# final_score3 = cross_val_score(clf,\n",
-    "#                                trainX,\n",
-    "#                                trainY,\n",
-    "#                                cv  = 5,\n",
-    "#                                scoring='accuracy'                            \n",
-    "#                        )\n",
-    "\n",
-    "\n",
     "print('Cooresponding loss:', final_score3.mean(), sep='\\n')"
    ]
   },
@@ -1244,18 +1238,6 @@
     "                   learning_rate = best['learning_rate'],\n",
     "                   gamma = best['gamma'],\n",
     "                   colsample_bytree = best['colsample_bytree'])\n",
-    "# final_score3 = cross_val_score(clf,\n",
-    "#                         train_cl[ML_columns], \n",
-    "#                         train_cl['Target'], \n",
-    "#                         cv  = cv,\n",
-    "#                         scoring='roc_auc'                            \n",
-    "#                        )\n",
-    "# clf.fit(trainX,trainY)\n",
-    "# final_prediction = clf.predict(testX)\n",
-    "# cm_final = confusion_matrix(testY,predictions).flatten()\n",
-    "# (tn, fp, fn, tp) = cm_final\n",
-    "# accuracy_final = (tp + tn) / float(cm_final.sum())\n",
-    "\n",
     "\n",
     "print('Cooresponding loss:', accuracy_final, sep='\\n')"
    ]
